# nos-modules

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  README.md  actions.py  compile_shaders.py  modules.json  plugins.json  release.py
MZColorCorrect/: CMakeLists.txt  MZColorCorrect.proto  main.cpp  mzColorCorrect.frag  mzColorCorrect.frag.spv  mzColorCorrect.mzcfg  mzColorCorrect.proto
MZMath/: AwesomeGraph.mzgr  CMakeLists.txt  FAdd.mzgr  LinearPolynomial.json  MZMath.proto  MathMain.cpp  Norm.mzgr  ProtoCommon2.proto  Square.mzgr  SquareRoot.mzgr  VectorDistance.mzgr  mzMath.mzcfg  mzMath.proto  mzMathConfig.h
MZMediaSource/: CMakeLists.txt  MediaSource.cpp  MediaSource.mzgr  mzMediaSource.mzcfg  mzMediaSource.proto  mzMediaSourceConfig.h
Plugins/: CMakeLists.txt  compile_shaders.py  plugins.json
Plugins/NVVFX/: CMakeLists.txt
Plugins/NVVFX/Config/: NVVFX.noscfg  NVVFX.nosdef  NVVFX_AIGreenScreen.nosdef  NVVFX_AR.nosdef  NVVFX_SuperRes.nosdef
Plugins/NVVFX/Source/: CUDAResourceManager.cpp  CUDAResourceManager.h  CUDAVulkanInterop.cpp  CUDAVulkanInterop.h  CommonCUDAKernels.cu  CommonCUDAKernels.h  NVVFX.cpp  NVVFXAppRunner.cpp  NVVFXAppRunner.h  NVVFXCudaVulkanInterop.cpp  NVVFXCudaVulkanInterop.h  NVVFXInterop.cpp  NVVFXInterop.h  NVVFX_AIGreenScreen.cpp  NVVFX_AR.cpp  NVVFX_Names.h  NVVFX_SuperRes.cpp  NVVideoEffectsProxy.cpp  RGBAtoPlanarRGBA.comp  nvCVImageProxy.cpp
Plugins/mzAJA/Shaders/: RGB2YCbCr.comp
Plugins/mzAJA/Source/: AJADevice.h  AJAMain.cpp  CopyThread.cpp  CopyThread.h
Plugins/mzFilters/Config/: Sampler.mzdef
Plugins/mzFilters/Shaders/: Diff.frag  Kuwahara.frag
Plugins/mzFilters/Source/: GaussianBlur.hpp
Plugins/mzTest/Config/: Test.fbs
Plugins/mzWebRTC/: CMakeLists.txt
Plugins/nosAJA/: .nospub  AJA.noscfg  CMakeLists.txt
Plugins/nosAnimation/: .nospub  .nossign  Animation.noscfg  CMakeLists.txt
Plugins/nosCNN/: CMakeLists.txt
Plugins/nosCubeMask/: CMakeLists.txt  CubeMask.noscfg
Plugins/nosFilters/: .nossign  CMakeLists.txt  Filters.noscfg
Plugins/nosInterop/: CMakeLists.txt
Plugins/nosMath/: .nossign  CMakeLists.txt  Math.noscfg
Plugins/nosMediaIO/: .nospub  CMakeLists.txt  MediaIO.noscfg
Plugins/nosNoise/: .nospub  .nossign  CMakeLists.txt  Noise.noscfg
Plugins/nosONNX/: CMakeLists.txt
Plugins/nosPyUtils/: .nossign  CMakeLists.txt  PyUtils.noscfg
Plugins/nosReflect/: .nossign  CMakeLists.txt  Reflect.noscfg
Plugins/nosStrings/: .nossign  CMakeLists.txt  Strings.noscfg
Plugins/nosTensors/: CMakeLists.txt  generate_cuda_kernels.py
Plugins/nosTest/: .nossign  CMakeLists.txt  Test.noscfg
Plugins/nosTrack/: .nospub  .nossign  CMakeLists.txt  Track.noscfg
Plugins/nosUtilities/: .nossign  CMakeLists.txt  Utilities.noscfg
Plugins/nosWebRTC/: .nospub  .nossign  CMakeLists.txt  WebRTC.noscfg
Subsystems/: .gitignore  CMakeLists.txt
Subsystems/mzVulkanSubsystem/: CMakeLists.txt
Subsystems/nosAI/: AI.nossys  CMakeLists.txt
Subsystems/nosAnimationSubsystem/: .nossign  CMakeLists.txt  nosAnimationSubsystem.nossys
Subsystems/nosCUDASubsystem/: CMakeLists.txt  CUDA.nossys
Subsystems/nosCUDAVulkanInteropSubsystem/: CUDAVulkanInterop.nossys
Subsystems/nosConfigurationSubsystem/: CMakeLists.txt  Config.nossys
Subsystems/nosMLInfrastructure/: CMakeLists.txt  MLInfra.nossys  generate_cuda_kernels.py
Subsystems/nosPython/: .nospub  .nossign  CMakeLists.txt  Python.nossys  README.md
Subsystems/nosShaderCompiler/: .nospub  ShaderCompiler.nossys
Subsystems/nosTensorSubsystem/: CMakeLists.txt  TensorSubsys.nossys  generate_cuda_kernels.py
Subsystems/nosTestSubsystem/: .nossign  CMakeLists.txt  Test.nossys
Subsystems/nosVariableSubsystem/: .nospub  .nossign  CMakeLists.txt  Variable.nossys
mzAJA/: CMakeLists.txt
mzAJA/Config/: AJA.mzcfg  AJA.mzdef
mzAJA/Shaders/: YCbCr2RGB.comp
mzAJA/Source/: AJAClient.cpp  AJAClient.h  AJADevice.cpp  AJADevice.h  AJAMain.cpp  AJAMain.h  CopyThread.cpp  CopyThread.h  InterlacedFlags.h  RGB2YCbCr.comp  RGB2YCbCr.frag  Ring.h  YCbCr2RGB.frag
mzBasic/: CMakeLists.txt  README.md
mzBasic/Source/: BasicMain.cpp  BasicMain.h
mzMath/: CMakeLists.txt
mzMath/Config/: Math.mzcfg  Math.mzdef  mzMath.mzcfg
mzMath/Source/: Math.cpp
mzUtilities/: CMakeLists.txt
mzUtilities/Config/: Array.mzdef  ChannelViewer.mzdef  Checkerboard.mzdef  Color.mzdef  Distortion.mzdef  Gradient.mzdef  ImageIO.mzcfg  ImageIO.mzdef  Interlace.mzdef  Merge.mzdef  Offset.mzdef  QuadMerge.mzdef  Resize.mzdef  SevenSegment.mzdef  Swizzle.mzdef  TextureSwitcher.fbs  TextureSwitcher.mzdef  Utilities.mzcfg
mzUtilities/Shaders/: ChannelViewer.frag  Color.frag  Swizzle.frag
mzUtilities/Source/: Array.cpp  ChannelViewer.cpp  ChannelViewer.hpp  Delay.cpp  Disarray.cpp  Indexer.cpp  Interlace.frag  Merge.cpp  Merge.cpp.to_be_ported  Merge.hpp  ReadImage.cpp  Resize.cpp  Resize.frag  Resize.hpp  SevenSegment.frag  Time.cpp  TypeCommon.cpp  TypeCommon.h  Undistort.frag  UtilitiesMain.cpp  WriteImage.cpp
mzWebRTC/: CMakeLists.txt
mzWebRTC/Config/: WebRTC.mzcfg  WebRTCClient.mzcfg  WebRTCClient.mzdef  WebRTCPlayer.mzdef  WebRTCSignalingServer.mzdef  WebRTCStreamer.mzdef
mzWebRTC/Shaders/: RGBtoYUV420.comp
mzWebRTC/Source/: RGBtoYUV420.comp  RGBtoYUV420_Linearized.comp  VideoSource.cpp  VideoSource.h  WebRTCManager.cpp  WebRTCManager.h  WebRTCPlugin.cpp  YUV420toRGB.comp  defaults.cpp  dummy_main.cpp  mzCustomVideoSink.cpp  mzCustomVideoSource.cpp  mzEncodeImageObserver.cpp  mzI420Buffer.h  mzLinearI420Buffer.h  mzSetSDPObserver.cpp  mzSignalingServer.cpp  mzSignalingServer.h  mzVideoEncoder.cpp  mzVideoEncoder.h  mzVideoEncoderFactory.h  mzWebRTCCommon.h  mzWebRTCJsonConfig.h  mzWebRTCManager.cpp  mzWebRTCManager.h  mzWebRTCPlayer.cpp  mzWebRTCSignalingServer.cpp  mzWebRTCStreamer.cpp  mzWebSocketClient.cpp  peer_connection_client.cpp  peer_connection_client.h
zdFrustum/: CMakeLists.txt
zdFrustum/Config/: Frustum.fbs  Frustum.mzcfg  Frustum.mzdef
zdFrustum/Source/: FrustumNode.cpp  ZD.Curve.CalibrationCurve.cpp  ZD.Curve.GenericCalibration.cpp
(+663 files in other folders)
