add_library(MZColorCorrect SHARED main.cpp)

set_target_properties(MZColorCorrect
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/MZColorCorrect"
  RUNTIME_OUTPUT_DIRECTORY_DEBUG "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/MZColorCorrect"
  RUNTIME_OUTPUT_DIRECTORY_RELEASE "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/MZColorCorrect"
)
