add_library(MZMath SHARED MathMain.cpp)

set_target_properties(MZMath
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/MZMath"
  RUNTIME_OUTPUT_DIRECTORY_DEBUG "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/MZMath"
  RUNTIME_OUTPUT_DIRECTORY_RELEASE "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/MZMath"
)
