add_library(mzMath SHARED MathMain.cpp)

set_target_properties(mzMath
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/mzMath"
  RUNTIME_OUTPUT_DIRECTORY_DEBUG "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/mzMath"
  RUNTIME_OUTPUT_DIRECTORY_RELEASE "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/mzMath"
)