add_library(mzMediaSource SHARED MediaSource.cpp)

set_target_properties(mzMediaSource
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/mzMediaSource"
  RUNTIME_OUTPUT_DIRECTORY_DEBUG "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/mzMediaSource"
  RUNTIME_OUTPUT_DIRECTORY_RELEASE "${MZ_PLUGIN_BINARY_OUTPUT_DIRECTORY}/mzMediaSource"
)